--- a/src/subosity-app/src/styles/subscriptionListItem.css
+++ b/src/subosity-app/src/styles/subscriptionListItem.css
@@ -1,9 +1,54 @@
+/* .provider-name-container {
+    width: 100%;
+    max-width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex-shrink: 1;
+    font-size: .85rem;
+}
+
+.provider-name {
+    color: var(--bs-body-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .provider-name-container {
+        max-width: 320px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+    .provider-name-container {
+        max-width: 500px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .provider-name-container {
+        max-width: 900px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .provider-name-container {
+        max-width: 1100px;
+    }
+} */
+
+
+
 .provider-description-container {
     width: 100%;
     max-width: 700px;
     overflow: hidden;
     text-overflow: ellipsis;
     flex-shrink: 1;
+    font-size: .85rem;
 }
 
 .provider-description {
